-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.10
-
None
-
996d744f2 (dev), 07b890936 (dev), d144d5dd0 (dev)
https://codereview.qt-project.org/c/qt/qtbase/+/627093 introduced a regression when comparing std::string_view with QByteArray.
this code used to work before:
void tst_QByteArray::std_string_stringview_comparison()
{
QByteArray ba("yada");
std::string_view sv("yada");
std::string s("yada");
QCOMPARE(ba, sv);
QCOMPARE(ba, s);
}
now it is broken, which caused a compile failure in qtmultimedia
- resulted in
-
QTBUG-134937 error: no match for ‘operator==’ (operand types are ‘const std::optional<QByteArray>’ and ‘std::optional<std::basic_string_view<char> >’)
-
- Closed
-
| For Gerrit Dashboard: QTBUG-134902 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 632734,1 | QByteArray: fix string/string_view comparison | dev | qt/qtbase | Status: NEW | 0 | 0 |
| 632565,11 | PipeWire: fix ambiguous comparison of std::string_view <> QByteArray | dev | qt/qtmultimedia | Status: MERGED | +2 | +1 |
| 633004,6 | QByteArray(View) comparisons: tame the overload set a bit | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 638616,3 | tst_qaxobjectcom: fix compile failure after qtbase update | dev | qt/qtactiveqt | Status: MERGED | +2 | 0 |