QByteArray(View) comparisons: tame the overload set a bit

QByteArray declares comparison operators against QByteArrayView.
With the addition of the implicit conversion from QByteArray to
std::string_view, those comparison operators are now ambiguous
when comparing a QByteArray against a std::string_view. The
overload set contains:

1) QByteArray<=>QByteArrayView, after converting the string_view
   to a QByteArrayView
2) string_view<=>string_view, after converting the QByteArray to
   string_view.

This is part of the fallout of adding QByteArray->std::string_view
implicit conversions. We accepted the risk of SICs, and here they are.

The first operator should have never been added: comparing a QByteArray
to a QByteArrayView is already possible using QByteArrayView's own
comparison operators (QBAV<=>QBAV, after converting the QBA to it).
Therefore, this commit removes it.

The removal reveals two other problems:

1) there is a comparison defined between QByteArrayView and
const char *. That comparison makes comparing QByteArrayView and
QByteArray ambiguous, because QByteArray can convert to both
QByteArrayView (thus finding the QBAV<=>QBAV comparisosn) and to const
char * (thus finding the QBAV<=>const char * comparison).

Again, the latter overloads should have never been added: const char *
implicitly converts to QByteArrayView and therefore it's served by the
QBAV<=>QBAV comparison operators. This gets removed too.

2) comparisons between QByteArray and types convertible to
QByteArrayView (e.g. std::string) are no longer possible. These were
never meant to be supported: heterogeneous string comparisons must first
and foremost convert everything to a common view type
(...QAnyStringView?), and only then the comparison can proceed.

In general, we should aim at this setup:

1) Owning string classes should only have homogeneous comparisons. They
   might offer heterogeneous comparisons (say, QString <=> const char *)
   on a case-by-case basis. The must never declare comparisons against
   views (instead, view's own comparisons will take care of comparing
   an owning string agains a view!).  Comparing different owning string
   types directly is not meant to be supported (e.g. QString <=>
   std::u16_string), as per above.

2) Views only have homogeneous comparisons. Everything compatible will
   convert to the view type for the comparison. Again, exceptions on
   a case-by-case basis (e.g. QStringView<=>const char *, protected by
   the NO_ASCII macro / ASCII_WARN / etc.).

3) We do not support compare against views coming from other libraries
   (e.g. QByteArrayView<=>std::string_view). One always risks an
   ambiguity, since both convert to each other. SG16 has rejected ideas
   of a "string view protocol"; Qt view classes implicitly build from
   compatible ranges (which likely includes any other string view class
   out there), which makes it a magnet for these ambiguities (say
   against a 3rd party view class that also does the same).

This isn't a complete overhaul: there are still strings and views that
don't follow the above and this commit isn't changing them yet.

Fixes: QTBUG-134902
Change-Id: If181af1fb627490423ca1e467ecce7330f7445fb
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>